--- a/mine.html
+++ b/mine.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-<img src="beach.jpg" width="300" height="200">
+<img src="./beach.jpg" width="300" height="200">
 <h1>BHARAT KUMAR</h1>
 
 <p>this is the trail </p>
